fix (Bootstrap) Disable zooming in on input controls on iOS
Bootstrap has default font-size 14px. Font size must
be at least 16px or iOS will zoom in when focusing on an input.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,24 @@ body {
   padding: 0;
 }
 
+/*
+ * Prevent iOS Safari from zooming in when focusing in an input field.
+ *
+ * http://stackoverflow.com/a/26069511/422848
+ * http://stackoverflow.com/a/16255670/422848
+*/
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  .form-control {
+    font-size: 16px;
+  }
+}
+/* Use Bootstrap default font-size otherwise */
+@media (min-width: 768px) {
+  .form-control {
+    font-size: 14px;
+  }
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
